# exot_app_lib

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/modules/: add_fiber_dependency.cmake  clone_target.cmake  colour_message.cmake  configure_clang_format.cmake  configure_clang_tidy.cmake  print_build_info.cmake  print_directory_properties.cmake  print_target_properties.cmake  sanitizers.cmake
cmake/scripts/: run-clang-tidy.py
cmake/toolchains/: .gitignore  android-arm64-v8a.cmake  android-armeabi-v7a.cmake  arm-linux-gnueabihf-g++-libstdc++-odroid-rpath.cmake  arm-linux-gnueabihf-g++-libstdc++-odroid-static.cmake  clang-libc++-rpath.cmake  clang-libc++-static.cmake  clang-libstdc++-rpath.cmake  clang-libstdc++-static.cmake  clang-libstdc++.cmake  g++-libstdc++-rpath.cmake  g++-libstdc++-static.cmake
examples/: README.md  configurable.cpp  example.json  generator.cpp  meter.cpp  set_bit.cpp
include/exot/components/: domain_adapter.h  function_nodes.h  generator_ffb.h  generator_host.h  loadgen_mt.h  loadgen_ut.h  logger.h  meter_host.h  meter_host_logger.h  schedule_reader.h
include/exot/framework/: all.h  connect.h  executor.h  interface.h  node.h  queue.h  state.h
include/exot/generators/: base.h  base_bitset.h  base_ffb.h  base_shared_memory.h  cache_maurice_mt.h  cache_ristenpart_st.h  cache_st.h  inactive_mt.h  rdseed_mt.h  util_bitset.h  utilisation_ffb_conservative.h  utilisation_mt.h  utilisation_ut.h
include/exot/meters/: base.h  base_shared_memory.h  cache.h  cache_er.h  cache_ff.h  cache_fp.h  cache_fr.h  cache_l1.h  cache_pp.h  cache_ristenpart.h  fan_procfs.h  fan_sysfs.h  frequency.h  frequency_rel.h  frequency_sysfs.h  power.h  power_msr.h  process.h  process_android.h  rdseed.h  rdseed_status.h  rdseed_timing.h  thermal.h  thermal_msr.h  thermal_sysfs.h  utilisation.h  utilisation_procfs.h
include/exot/primitives/: cache.h  fenced_clock.h  monotonic_clock.h  msr.h  ordering.h  perf_clock.h  rng.h  tsc.h  tsc_clock.h  x86_64.h
include/exot/utilities/: alignment.h  allocator.h  barrier.h  bits.h  cache.h  cli.h  configuration.h  debug.h  enum.h  eviction.h  filesystem.h  fmt.h  formatting.h  helpers.h  istream.h  literals.h  logging.h  main.h  mmap.h  ostream.h  pagemap.h  platform_id.h  synchronised.h  thread.h  timing.h  timing_source.h  types.h  workers.h
src/generators/: cache_maurice_mt.cpp  cache_ristenpart_st.cpp  rdseed_mt.cpp  utilisation_ffb_conservative.cpp  utilisation_mt.cpp  utilisation_ut.cpp
src/meters/: cache_l1.cpp  cache_ristenpart.cpp  frequency_rel.cpp  frequency_sysfs.cpp  power_msr.cpp  process_android.cpp  thermal_msr.cpp  thermal_sysfs.cpp  utilisation_procfs.cpp
src/primitives/: msr.cpp  x86_64.cpp
src/utilities/: barrier.cpp  cli.cpp  configuration.cpp  filesystem.cpp  logging.cpp  platform_id.cpp  thread.cpp
test/: test_configuration.cpp  test_istream.cpp  test_logging.cpp  test_main.cpp  test_queue.cpp
